--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salvatores</title>
+    <!-- LINK -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/icon/css/all.css">
 </head>
 <body>
 
+
+    <!--=======================
+            NAVBAR 
+    =======================-->
     <nav class="nav">
         <div class="navbar">
             <div class="logo">
@@ -44,7 +49,9 @@
 
 
 
-
+    <!--====================
+            HEADER 
+    =====================-->
     <header class="header__container">
         <div class="header__content">
             <h2>Time to job heist </h2>
@@ -54,6 +61,10 @@
     </header>
 
 
+
+    <!--=====================
+            ABOUT 
+    =====================-->
     <section class="company__container" id="about">
         <div class="title">ABOUT US</div>
         <div class="company__grid">
@@ -71,6 +82,10 @@
     </section>
 
 
+
+    <!--======================
+            SERVICES 
+    =======================-->
     <section class="service__container" id="services">
         <div class="title">Services</div>
         <div class="service__flex">
@@ -102,6 +117,9 @@
     </section>
 
 
+    <!--=======================
+            CONTACT 
+    ========================-->
     <div class="contact__container" id="contact">
         <p>If You Have Any Project in Your Mind ?</p>
         <div class="contact__box">
@@ -115,21 +133,28 @@
     </div>
 
 
+    <!--=====================
+            FOOTER 
+    ======================-->
     <footer class="footer">
         <div class="footer__logo">
             <img src="assets/img/logo.png" alt="">
         </div>
         <ul>
             <li>
+                <!-- FACEBOOK -->
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
             </li>
             <li>
+                <!-- TWITTER -->
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
+                <!-- INSTAGRAM -->
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
+                <!-- LINKEDIN -->
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </li>
         </ul>
@@ -141,6 +166,7 @@
     
 
 
+    <!-- SCRIPT -->
     <script src="assets/js/script.js"></script>
     
 </body>
