--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     =====================-->
     <header class="header__container">
         <div class="header__content">
-            <h2>Time to job heist </h2>
-            <p> An opportunity to learn Marketing</p>
-            <div class="line"></div>
+            <div class="header__box">
+                <h2>Time to job heist </h2>
+                <p> An opportunity to learn Marketing</p>
+                <div class="line"></div>
+            </div>
         </div>
     </header>
 
