--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVATORE</title>
     <!-- LINK -->
+    
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="icon" href="assets/img/icon.png">
@@ -65,22 +66,78 @@
     </header>
 
 
+    <!--======================
+            COMPANY 
+    =======================-->
+    <div class="company__container">
+        <div class="company__grid">
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-1.png" alt="">
+                </div>
+                <h2>Save</h2>
+                <h3>Money</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-2.png" alt="">
+                </div>
+                <h2>Insightful</h2>
+                <h3>Statistics</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-3.png" alt="">
+                </div>
+                <h2>Design </h2>
+                <h3>Strategy</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-4.png" alt="">
+                </div>
+                <h2>Social</h2>
+                <h3>Setting</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-5.png" alt="">
+                </div>
+                <h2>Worldwide</h2>
+                <h3>Support</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+            <div class="company__box">
+                <div class="company__img">
+                    <img src="assets/img/company-6.png" alt="">
+                </div>
+                <h2>Business</h2>
+                <h3>Brain</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, odit error doloribus eligendi nostrum dolores aperiam rem necessitatibus corrupti aliquam molestiae sequi sapiente ducimus doloremque id quia iste dolorem! Expedita!</p>
+            </div>
+        </div>
+    </div>
+
+
 
     <!--=====================
             ABOUT 
     =====================-->
-    <section class="company__container" id="about">
+    <section class="about__container" id="about">
         <div class="title">ABOUT US</div>
-        <div class="company__grid">
-            <div class="company__img">
+        <div class="about__grid">
+            <div class="about__img">
                 <img src="assets/img/company.jpg" alt="">
             </div>
-            <div class="company__content">
+            <div class="about__content">
                 <h2>THE SALVATORES</h2>
                 <h4>Online software sales company</h4>
-                <!-- <div class="line-2"></div> -->
                 <p>This is Brand new online  software sales company . This is marketing company .we sale softwares ,websites and also Web hosting  This company is founded to give a   Job opportunity for youngsters  by the youngsters  & also giving software for very low rate  that every customer will afford.  Everyone can join our company as sales executive. This company helps you to learn marketing and most importantly Earn in marketing.</p>
-                <a href="#" class="company__btn">View More</a>
+                <a href="#">View More</a>
             </div>
         </div>
     </section>
@@ -168,6 +225,8 @@
     <div class="licence">&copy; 2021 THE SALVATORES. ALL RIGHTS RESERVED.</div>
 
     
+    <img src="assets/img/untitled (1).png" width="50px" alt="">
+    <img src="assets/img/2.png" width="50px" alt="">
 
 
     <!-- SCRIPT -->
