--- a/index.html
+++ b/index.html
@@ -178,10 +178,57 @@
     </section>
 
 
+
+
+    <!--======================
+            FEATURES 
+    =======================-->
+    <div class="features__container">
+        <div class="features__content">
+            <h2>Our Features Stack</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt temporibus odio fugit itaque numquam, omnis non quisquam ipsa, cupiditate maxime dolor perferendis. Fuga quas omnis explicabo tempora repellendus nesciunt sed!</p>
+        </div>
+        <div class="features__grid">
+            <div class="features__box">
+                <img src="assets/img/features-1.png" alt="">
+                <p>Responsive</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-2.png" alt="">
+                <p>Customizable</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-3.png" alt="">
+                <p>Creative</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-4.png" alt="">
+                <p>Clean Code</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-5.png" alt="">
+                <p>Support</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-6.png" alt="">
+                <p>Ready Content</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-7.png" alt="">
+                <p>Documented</p>
+            </div>
+            <div class="features__box">
+                <img src="assets/img/features-8.png" alt="">
+                <p>Components</p>
+            </div>
+        </div>
+    </div>
+
+
     <!--=======================
             CONTACT 
     ========================-->
-    <div class="contact__container" id="contact">
+    <!-- <div class="contact__container" id="contact">
         <p>If You Have Any Project in Your Mind ?</p>
         <div class="contact__box">
             <img src="assets/img/contact-1.jpg" alt="">
@@ -191,7 +238,7 @@
                 <div><span>Phone: </span> +91 9003526670</div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!--=====================
