--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVATORE</title>
     <!-- LINK -->
-    
+    <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="icon" href="assets/img/icon.png">
@@ -223,6 +223,70 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <!--==================
+            TEAM 
+    ===================-->
+
+    <section class="team__container">
+        <div class="title">Testimonial</div>
+        <div class="slider__container">
+            <div class="slides fade">
+                <div class="caption">
+                    <p>
+                        <img src="assets/img/quote.png"alt=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae culpa officiis repellendus repudiandae adipisci laudantium commodi dolor minus, nihil praesentium similique consectetur, doloribus corrupti qui debitis numquam, repellat deserunt saepe.</p>
+                </div>
+                <div class="profile">
+                    <img src="assets/img/team-1.png" alt="">
+                </div>
+                <h2>William J. Pollock</h2>
+                <h3>CEO, Project Manager</h3>
+            </div>
+            <div class="slides fade">
+                <div class="caption">
+                    <p><img src="assets/img/quote.png"alt=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae culpa officiis repellendus repudiandae adipisci laudantium commodi dolor minus, nihil praesentium similique consectetur, doloribus corrupti qui debitis numquam, repellat deserunt saepe.</p>
+                </div>
+                <div class="profile">
+                    <img src="assets/img/team-2.png" alt="">
+                </div>
+                <h2>Helena E. Carnahan</h2>
+                <h3>Team Leader</h3>
+            </div>
+            <div class="slides fade">
+                <div class="caption">
+                    <p><img src="assets/img/quote.png"alt=""> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut corporis molestias commodi omnis iste quas dolorem! Iste modi veniam, magnam aperiam doloribus itaque, accusamus maxime, aspernatur veritatis unde quaerat delectus.</p>
+                </div>
+                <div class="profile">
+                    <img src="assets/img/team-3.jpg" alt="">
+                </div>
+                <h2>Gilbert L. Buffington</h2>
+                <h3>Web Developer</h3>
+            </div>
+            <div class="slides fade">
+                <div class="caption">
+                    <p><img src="assets/img/quote.png"alt=""> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut corporis molestias commodi omnis iste quas dolorem! Iste modi veniam, magnam aperiam doloribus itaque, accusamus maxime, aspernatur veritatis unde quaerat delectus.</p>
+                </div>
+                <div class="profile">
+                    <img src="assets/img/team-4.png" alt="">
+                </div>
+                <h2>Sabina H. Tobar</h2>
+                <h3>Web Designer</h3>
+            </div>
+
+            <button class="prev" onclick="plusSlides(-1)"><img src="assets/img/arrow.png" alt=""></button>
+            <button class="next" onclick="plusSlides(1)"><img src="assets/img/arrow.png" alt=""></button>
+        </div>
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+    </section>
+
 
 
     <!--=======================
