--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVATORE</title>
     <!-- LINK -->
-    <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'> -->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="icon" href="assets/img/icon.png">
@@ -28,6 +28,7 @@
                 <li><a href="#" class="menu__item">Home</a></li>
                 <li><a href="#about" class="menu__item">About</a></li>
                 <li><a href="#services" class="menu__item">Services</a></li>
+                <li><a href="#testimonial" class="menu__item">testimonial</a></li>
                 <li><a href="#contact" class="menu__item">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -46,6 +47,7 @@
             <li><a href="#" class="mobile__item">Home</a></li>
             <li><a href="#about" class="mobile__item">About</a></li>
             <li><a href="#services" class="mobile__item">Services</a></li>
+            <li><a href="#testimonial" class="mobile__item">Testimonial</a></li>
             <li><a href="#contact" class="mobile__item">Contact</a></li>
         </ul>
     </div>
@@ -227,11 +229,11 @@
 
 
 
-    <!--==================
-            TEAM 
-    ===================-->
+    <!--=======================
+            TESTIMONIAL
+    ========================-->
 
-    <section class="team__container">
+    <section class="testimonial__container" id="testimonial">
         <div class="title">Testimonial</div>
         <div class="slider__container">
             <div class="slides fade">
