--- a/index.html
+++ b/index.html
@@ -294,17 +294,77 @@
     <!--=======================
             CONTACT 
     ========================-->
-    <!-- <div class="contact__container" id="contact">
-        <p>If You Have Any Project in Your Mind ?</p>
-        <div class="contact__box">
-            <img src="assets/img/contact-1.jpg" alt="">
-            <div class="email">
-                <span>Email: </span>
-                <a href = "mailto: vishwanathvishwabai@gmail.com">tech@akash.com</a>
-                <div><span>Phone: </span> +91 9003526670</div>
+
+    <section class="contact__container">
+        <div class="title">Contact</div>
+        <div class="contact__grid">
+            <div class="contact__box-1">
+                <div class="contact__content">
+                    <h2>get in touch</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, aliquid harum ipsum debitis rem, distinctio corrupti eaque numquam dicta minima laudantium perferendis eos. Tempore facere consequatur quisquam, magnam illo aliquid.</p>
+                </div>
+                <div class="contact__details">
+                    <div>
+                        <i class="fas fa-user-alt"></i>
+                    </div>
+                    <div>
+                        <h2>Name</h2>
+                        <p>Akash</p>
+                    </div>
+                </div>
+                <div class="contact__details">
+                    <div>
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div>
+                        <h2>Address</h2>
+                        <p>Thuraioor, Tiruchirappalli</p>
+                    </div>
+                </div>
+                <div class="contact__details">
+                    <div>
+                        <i class="fas fa-mobile"></i>
+                    </div>
+                    <div>
+                        <h2>Phone</h2>
+                        <p>+91 9856347810</p>
+                    </div>
+                </div>
+                <div class="contact__details">
+                    <div>
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <div>
+                        <h2>Email</h2>
+                        <p>akash@salvatore.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact__box-2">
+                <h2>Contact</h2>
+                <form class="contact__form">
+                    <div class="form__div">
+                        <label>Name</label>
+                        <input type="text" placeholder="Jhon Doe" required>
+                    </div>
+                    <div class="form__div">
+                        <label>Email</label>
+                        <input type="text" placeholder="example@support.com" required>
+                    </div>
+                    <div class="form__div">
+                        <label>Subject</label required>
+                        <input type="text">
+                    </div>
+                    <div class="form__div">
+                        <label>Message</label>
+                        <textarea required></textarea>
+                    </div>
+                    <button type="submit"><i class="fab fa-telegram-plane"></i> send</button>
+                </form>
             </div>
         </div>
-    </div> -->
+    </section>
+
 
 
     <!--=====================
@@ -336,11 +396,6 @@
 
 
     <div class="licence">&copy; 2021 THE SALVATORES. ALL RIGHTS RESERVED.</div>
-
-    
-    <img src="assets/img/untitled (1).png" width="50px" alt="">
-    <img src="assets/img/2.png" width="50px" alt="">
-
 
     <!-- SCRIPT -->
     <script src="assets/js/script.js"></script>
