--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVATORE</title>
-    <!-- LINK -->
+    <!-- FONT -->
     <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <!-- ICON -->
     <link rel="icon" href="assets/img/icon.png">
+    <!-- STYLESHEET -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
+    <!-- FONTAWSOME -->
     <link rel="stylesheet" href="assets/icon/css/all.css">
 </head>
 <body>
@@ -129,7 +132,7 @@
     <!--=====================
             ABOUT 
     =====================-->
-    <section class="about__container" id="about">
+    <section id="about" class="about__container" >
         <div class="title">ABOUT US</div>
         <div class="about__grid">
             <div class="about__img">
@@ -149,7 +152,7 @@
     <!--======================
             SERVICES 
     =======================-->
-    <section class="service__container" id="services">
+    <section id="services" class="service__container" >
         <div class="title">Services</div>
         <div class="service__flex">
             <div class="service__box">
@@ -232,8 +235,7 @@
     <!--=======================
             TESTIMONIAL
     ========================-->
-
-    <section class="testimonial__container" id="testimonial">
+    <section id="testimonial" class="testimonial__container" >
         <div class="title">Testimonial</div>
         <div class="slider__container">
             <div class="slides fade">
@@ -294,8 +296,7 @@
     <!--=======================
             CONTACT 
     ========================-->
-
-    <section class="contact__container">
+    <section id="contact" class="contact__container" >
         <div class="title">Contact</div>
         <div class="contact__grid">
             <div class="contact__box-1">
@@ -397,6 +398,7 @@
 
     <div class="licence">&copy; 2021 THE SALVATORES. ALL RIGHTS RESERVED.</div>
 
+    
     <!-- SCRIPT -->
     <script src="assets/js/script.js"></script>
     
