--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
     </footer>
 
 
+    <div class="scroll__container">
+        <button class="scroll__btn"><i class="fas fa-angle-up"></i></button>
+    </div>
+
+
     <div class="licence">&copy; 2021 THE SALVATORES. ALL RIGHTS RESERVED.</div>
 
     
